fix: z-index was added to settings.css (as module react-slider has a z-index=1)

--- a/src/assets/css/Settings.css
+++ b/src/assets/css/Settings.css
@@ -11,6 +11,7 @@
     border-style: solid;
     border-width: 4px;
     text-align: center;
+    z-index: 2;
 }
 
 .settings-header{
